package norm;

import java.awt.*;

public interface ColorNorm {

    double colorDistance(Color c1, Color c2);
}
